# OpenMGS

./: .gitignore  CMakeLists.txt
source/lib_metalgearsolid_pc/: CMakeLists.txt
source/lib_metalgearsolid_pc/inc/: mgs_archive.h
source/lib_metalgearsolid_pc/src/: mgs_archive.c
source/tools/extract_dar/: CMakeLists.txt  extract_dar.c
source/tools/extract_dar/src/: extract_dar.c
